--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
                   class="form-control"
                   id="floatingInput"
                   placeholder="Type Something funny!"
+                  maxlength="50"
                 />
                 <label for="floatingInput">Type Something Funny!</label>
               </div>
@@ -70,9 +71,10 @@
             </div>
           </div>
 
-          <div class="col-sm-6 columns align-items-center d-flex flex-column">
-            <div class="border border-3 shadow border-white">
+          <div class="col-sm-6 columns align-items-center d-flex flex-column" id="div-image-bigger">
+            <div class="border border-3 shadow border-white" id="div-image">
               <img src="" alt="" id='image-attach' />
+              <p id="img-paragraph"></p>
             </div>
             <div class="mt-4">
               <input type="file" id="formFile" class="form-control" />
