--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
           </div>
 
           <div class="col-sm-6 columns align-items-center d-flex flex-column" id="div-image-bigger">
-            <div class="border border-3 shadow border-white" id="div-image">
+            <div class="shadow" id="div-image">
               <img src="" alt="" id='image-attach' />
               <p id="img-paragraph"></p>
             </div>
