Made the images work

--- a/src/index.html
+++ b/src/index.html
@@ -91,6 +91,7 @@
               src="/images/meme1.png"
               alt="lil-guy"
               class="shadow border border-3"
+              id="img1"
             />
           </div>
           <div id="image2" class="col-2">
@@ -98,6 +99,7 @@
               src="/images/meme2.png"
               alt="guy-from-simpson"
               class="shadow border border-3"
+              id="img2"
             />
           </div>
           <div id="image3" class="col-2">
@@ -105,6 +107,7 @@
               src="/images/meme3.png"
               alt="/flerty-guy"
               class="shadow border border-3"
+              id="img3"
             />
           </div>
           <div id="image4" class="col-2">
@@ -112,6 +115,7 @@
               src="/images/meme4.png"
               alt="wtf-dog"
               class="shadow border border-3"
+              id="img4"
             />
           </div>
         </div>
